Bug 149178 - When you change the "Save autorecovery information every" option in the Options window and save the changes, the changes won't be saved.
Summary: When you change the "Save autorecovery information every" option in the Optio...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.3.2 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0
Keywords:
: 149180 149244 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-19 12:05 UTC by NISZ LibreOffice Team
Modified: 2022-09-15 16:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-05-19 12:05:09 UTC
Description:
When you change the "Save autorecovery information every" option in the Options window and save the changes, the changes won't be saved. 


Steps to Reproduce:
1. Creat a new document writer or calc
2. Clikk Tools/Options/Load and save/General/Save menu
3. Change a time "1" minute on the "Save Autorecovery information every "10" minutes" option
4. Edit files and do not save them manually
5. Wait "~11" minutes.

Actual Results:
The document save every 10 minutes.

Expected Results:
The document saving autorecovery should be set up the changed time.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 817b8fe7001a83cb74910eb09b7c14a3b95b8a39
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Telesto 2022-05-22 03:11:38 UTC
*** Bug 149180 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2022-05-23 07:01:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aeb8a0076cd5ec2836b3dfc1adffcced432f995f

tdf#149176 tdf#149178 fix Save autorecovery information.. option

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mike Kaganski 2022-05-23 13:51:16 UTC
*** Bug 149244 has been marked as a duplicate of this bug. ***
Comment 4 NISZ LibreOffice Team 2022-05-30 11:14:55 UTC
It is work normal but If you make any change to the Autorecovery information option you should restart LO.

Verified in:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 212cb61fb6adc05395b9f9afe0dacbd6594ae06b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 5 Mike Kaganski 2022-08-06 18:26:52 UTC
*** Bug 149244 has been marked as a duplicate of this bug. ***
Comment 6 Kevin Suo 2022-09-15 16:52:01 UTC
This bug also affects 7.3 version and is not fixed there. Is a backport possible, given that we still have one bug fix release pending.

From the line changes of the commit which fixed this on 7.4, I don't think backporting this to 7.3 is dangerous.