tdf#149178 show restart dialog when changing "Save Autorecovery...

information every" option

Change-Id: I91ae72ea1e52ec5c6d9286a43cd986386636076c